# lob-proc

./: .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.md  docker-compose.yml  main.cxx  order_book_parser.h
benchmarks/: market_generator.h  nats_e2e_benchmark.cpp  perf_benchmark.cpp
examples/: nats_processor.cpp
infra/: Makefile  README.md  deploy.sh  teardown.sh
infra/ansible/: playbook.yaml
infra/charts/feeder/: Chart.yaml  values.yaml
infra/charts/feeder/templates/: _helpers.tpl  deployment.yaml
infra/charts/processor/: Chart.yaml  values.yaml
infra/charts/processor/templates/: _helpers.tpl  deployment.yaml
infra/charts/viz/: Chart.yaml  values.yaml
infra/charts/viz/templates/: _helpers.tpl  deployment.yaml  service.yaml
infra/kind/: create-cluster.sh
src/: data_structures.h  order_factory.cpp  order_factory.h  snapshot_parser.cpp  snapshot_parser.h  types.h  utils.cpp  utils.h  wire_format.h
tests/: buy_book_test.cpp  constructor_test.cpp  double_compare_test.cpp  edge_case_test.cpp  market_order_test.cpp  multi_pair_test.cpp  negative_test.cpp  seeker_bounds_test.cpp  sell_book_test.cpp  test_common.h
viz/feeder/: Dockerfile  go.mod  main.go
viz/frontend/: index.html  package-lock.json  package.json
viz/frontend/src/: App.tsx  dockTheme.css  main.tsx  types.ts
viz/frontend/src/components/: DepthChart.tsx  DepthChartPanel.tsx  Heatmap.tsx  HeatmapPanel.tsx  OrderFlow.tsx  OrderFlowPanel.tsx
viz/frontend/src/context/: MarketDataContext.tsx
viz/frontend/src/hooks/: useWebSocket.ts
viz/frontend/src/lib/: colorScale.ts  heatmapRenderer.ts
viz/server/: Dockerfile  go.mod  go.sum  main.go
